--- a/DP-Mastery/001爬楼梯.md
+++ b/DP-Mastery/001爬楼梯.md
@@ -8,19 +8,19 @@
 **示例**
 示例 1：
 
-Input: n = 2
-Output: 2
-Explanation: There are two ways to climb to the top.
-1. 1 step + 1 step
-2. 2 steps
-示例 2：
+> Input: n = 2
+> Output: 2
+> Explanation: There are two ways to climb to the top.
+> 1. 1 step + 1 step
+> 2. 2 steps
+> 示例 2：
 
-Input: n = 3
-Output: 3
-Explanation: There are three ways to climb to the top.
-1. 1 step + 1 step + 1 step
-2. 1 step + 2 steps
-3. 2 steps + 1 step
+> Input: n = 3
+> Output: 3
+> Explanation: There are three ways to climb to the top.
+> 1. 1 step + 1 step + 1 step
+> 2. 1 step + 2 steps
+> 3. 2 steps + 1 step
  
 
 **约束**：
