--- a/DP-Mastery/001爬楼梯.md
+++ b/DP-Mastery/001爬楼梯.md
@@ -30,3 +30,19 @@
 1 <= n <= 45
 
 **思路**：
+十分经典的斐波那契数列题。使用动态规划，定义一个数组dp，dp[i]表示走到第i阶的方法数。
+
+**解法**：
+```cpp
+int climbStairs(int n) {
+    if (n == 1) return 1;
+    if (n == 2) return 2;
+    int pre2 = 1, pre1 = 2, cur;
+    for (int i = 2; i < n; ++i) {
+        cur = pre1 + pre2;
+        pre2 = pre1;
+        pre1 = cur;
+    }
+    return cur;
+}
+```
