--- a/DP-Mastery/001爬楼梯.md
+++ b/DP-Mastery/001爬楼梯.md
@@ -34,15 +34,15 @@
 
 **解法**：
 ```cpp
-int climbStairs(int n) {
-    if (n == 1) return 1;
-    if (n == 2) return 2;
-    int pre2 = 1, pre1 = 2, cur;
-    for (int i = 2; i < n; ++i) {
-        cur = pre1 + pre2;
-        pre2 = pre1;
-        pre1 = cur;
+    int climbStairs(int n) {
+        vector<int> dp(n + 1, 0);
+        dp[0] = 1;
+        dp[1] = 1;
+
+        for (int i = 2; i <= n; i++) {
+            dp[i] = dp[i - 1] + dp[i - 2];
+        }
+
+        return dp[n];        
     }
-    return cur;
-}
 ```
