--- a/DP-Mastery/002最长公共子序列.md
+++ b/DP-Mastery/002最长公共子序列.md
@@ -34,23 +34,39 @@
 *   `text1` 和 `text2` 仅由小写英文字符组成。
 
 **解法**
+这个[网站](https://lcs-demo.sourceforge.net/)有利于理解LCS,
 ```cpp
-int longestCommonSubsequence(string s, string t) {
-    int n = s.length(), m = t.length();
-    vector<vector<int>> memo(n, vector<int>(m, -1)); // -1 表示没有计算过
-    auto dfs = [&](auto&& dfs, int i, int j) -> int {
+int longestCommonSubsequence(string text1, string text2) {
+    int n = text1.length(), m = text2.length();
+
+    // 初始化备忘录数组，存储中间结果，-1 表示未计算
+    vector<vector<int>> memo(n, vector<int>(m, -1));
+
+    // 定义递归函数，计算 LCS 长度
+    auto calculateLCS = [&](auto&& self, int i, int j) -> int {
+        // 边界条件：如果任一字符串长度为 0
         if (i < 0 || j < 0) {
             return 0;
         }
-        int& res = memo[i][j]; // 注意这里是引用
-        if (res != -1) {
-            return res; // 之前计算过
+
+        // 如果子问题已经计算过，直接返回
+        int& result = memo[i][j]; // 注意 result 是 memo[i][j] 的引用
+        if (result != -1) {
+            return result;
         }
-        if (s[i] == t[j]) {
-            return res = dfs(dfs, i - 1, j - 1) + 1;
+
+        // 状态转移
+        if (text1[i] == text2[j]) {
+            // 当前字符匹配，LCS 长度加 1
+            result = self(self, i - 1, j - 1) + 1;
+        } else {
+            // 当前字符不匹配，取两种可能情况的较大值
+            result = max(self(self, i - 1, j), self(self, i, j - 1));
         }
-        return res = max(dfs(dfs, i - 1, j), dfs(dfs, i, j - 1));
+        return result;
     };
-    return dfs(dfs, n - 1, m - 1);
+
+    // 从字符串的最后一个字符开始计算 LCS 长度
+    return calculateLCS(calculateLCS, n - 1, m - 1);
 }
 ```
