--- a/DP-Mastery/002最长公共子序列.md
+++ b/DP-Mastery/002最长公共子序列.md
@@ -70,3 +70,8 @@ int longestCommonSubsequence(string text1, string text2) {
     return calculateLCS(calculateLCS, n - 1, m - 1);
 }
 ```
+时间复杂度：O(nm)。
+空间复杂度：O(nm)。
+对于空间复杂度的优化：
+可以将二维数组优化为滚动数组，仅保留当前行和上一行的状态，空间复杂度降为 O(min(n,m))。
+递归方法由于需要调用栈空间，无法实现上述优化。但若改为迭代（自底向上动态规划），则可以实现空间优化。
