--- a/DP-Mastery/003最小路径总和.md
+++ b/DP-Mastery/003最小路径总和.md
@@ -3,19 +3,22 @@
 给定一个充满非负数的 a，找到一条从左上角到右下角的路径，这将使沿其路径上所有数字的总和最小化。`m x n``grid`
 
 **注意：**您只能在任何时间点向下或向右移动。
-![image](https://github.com/user-attachments/assets/f14543d1-82fb-4817-8899-550e1afe0e0b)
+
+![image](/DP-Mastery/vx_images/374697168110116.png)
+
 
 **示例 1：**
 
-![](vx_images/374697168110116.jpg)
-
 **Input:** grid = \[\[1,3,1\],\[1,5,1\],\[4,2,1\]\]
+
 **Output:** 7
+
 **Explanation:** Because the path 1 → 3 → 1 → 1 → 1 minimizes the sum.
 
 **示例 2：**
 
 **Input:** grid = \[\[1,2,3\],\[4,5,6\]\]
+
 **Output:** 12
 
 **约束：**
@@ -48,3 +51,6 @@
         return dp[rows - 1][columns - 1];
     }
 ```
+
+
+[def]: /DP-Mastery/vx_images/374697168110116.png
