--- a/DP-Mastery/004零一矩阵.md
+++ b/DP-Mastery/004零一矩阵.md
@@ -7,11 +7,15 @@
 
 **示例 1：**
 
+![image1](/DP-Mastery/vx_images/374697168110167.png)
+
 **输入：** mat = \[\[0,0,0\],\[0,1,0\],\[0,0,0\]\]
 
 **输出：** \[\[0,0,0\],\[0,1,0\],\[0,0,0\]\]
 
 **示例 2：**
+
+![image2](/DP-Mastery/vx_images/374697168110199.png)
 
 **输入：** mat = \[\[0,0,0\],\[0,1,0\],\[1,1,1\]\]
 
