--- a/DP-Mastery/005最短编辑距离.md
+++ b/DP-Mastery/005最短编辑距离.md
@@ -43,7 +43,7 @@ exection -> execution (插入 'u')
 
 这道题的解法通常采用动态规划来解决。我们定义一个二维数组 `dp`，其中 `dp[i][j]` 表示将 `word1` 的前 `i` 个字符转换为 `word2` 的前 `j` 个字符所需要的最小操作数。
 
-### 动态规划递推关系：
+**动态规划递推关系**
 - 如果 `word1[i-1] == word2[j-1]`，那么 `dp[i][j] = dp[i-1][j-1]`，即不需要做任何操作。
 - 否则，`dp[i][j]` 由以下三种情况取最小值：
   - 插入操作：`dp[i][j-1] + 1`
@@ -54,7 +54,7 @@ exection -> execution (插入 'u')
 - `dp[i][0] = i`，表示将 `word1` 的前 `i` 个字符转换为空字符串需要 `i` 次删除操作。
 - `dp[0][j] = j`，表示将空字符串转换为 `word2` 的前 `j` 个字符需要 `j` 次插入操作。
 
-### 完整代码：
+**完整代码**
 
 ```cpp
 int minDistance(string word1, string word2) {
